--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,9 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
