--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:1970/medresedb
+spring.datasource.url=jdbc:postgresql://localhost:5432/medresedb
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=toor
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
