--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/medresedb
-spring.datasource.username=postgres
-spring.datasource.password=toor
+#spring.datasource.url=jdbc:postgresql://localhost:5432/medresedb
+spring.datasource.url=jdbc:postgres://dpg-cgu31diut4mcfrgf1hog-a:5432/medresedb
+#spring.datasource.username=postgres
+spring.datasource.username=medresedb_user
+#spring.datasource.password=toor
+spring.datasource.password=Gic6UyIcFfYcdPYYJwTjaHnI96S0gTXy
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
