--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,10 @@
 version: '3.8'
 services:
-  postgres:
-    image: postgres:15.2-alpine
-    ports:
-      - "5555:5555"
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: toor
-      POSTGRES_DB: medresedb
-    volumes:
-      - ./postgres-data:/var/lib/postgresql/data
-    networks:
-        - esm-network
-    restart: always
   java_app:
     image: openjdk:19-alpine
     ports:
       - "8080:8080"
-    networks:
-        - esm-network
     volumes:
-      - ./target/esm-0.0.1-SNAPSHOT.jar:/app/esm-0.0.1-SNAPSHOT.jar
-    command: ["java", "-jar", "/app/esm-0.0.1-SNAPSHOT.jar"]
+      - ./src/esm-0.0.1-SNAPSHOT.jar
+    command: ["java", "-jar", "/app/esm-0.0.1-SNAPSHOT.jar", "DEVELOPER_KEY=","AIzaSyDlfU5gNKiS8qEqW8yW7VHLNJO7h0vawNw"]
     restart: always
-
-networks:
-    esm-network:
-        driver: bridge
