--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./src/esm-0.0.1-SNAPSHOT.jar
-    command: ["java", "-jar", "/app/esm-0.0.1-SNAPSHOT.jar", "DEVELOPER_KEY=","AIzaSyDlfU5gNKiS8qEqW8yW7VHLNJO7h0vawNw"]
+      - ./src/esm-0.0.1-SNAPSHOT.jar:/app/esm-0.0.1-SNAPSHOT.jar
+    entrypoint: ["java", "-jar", "/app/esm-0.0.1-SNAPSHOT.jar", "DEVELOPER_KEY=", "AIzaSyDlfU5gNKiS8qEqW8yW7VHLNJO7h0vawNw"]
     restart: always
