--- a/DockerFile
+++ b/DockerFile
@@ -5,10 +5,10 @@
 #    ports:
 #      - "8080:8080"
 #    volumes:
-#      - ./src/esm.jar:/app/esm.jar
-#    entrypoint: ["java", "-jar", "/app/esm.jar", "DEVELOPER_KEY=", "AIzaSyDlfU5gNKiS8qEqW8yW7VHLNJO7h0vawNw"]
+#      - ./src/esm-0.0.1-SNAPSHOT.jar:/app/esm-0.0.1-SNAPSHOT.jar
+#    entrypoint: ["java", "-jar", "/app/esm-0.0.1-SNAPSHOT.jar", "DEVELOPER_KEY=", "AIzaSyDlfU5gNKiS8qEqW8yW7VHLNJO7h0vawNw"]
 #    restart: always
 FROM openjdk:19-alpine
 WORKDIR /app
-COPY ./src/esm.jar app/esm.jar
-CMD ["java", "-jar", "/app/esm.jar", "DEVELOPER_KEY=","AIzaSyDlfU5gNKiS8qEqW8yW7VHLNJO7h0vawNw"]
+COPY ./src/esm-0.0.1-SNAPSHOT.jar /app/esm-0.0.1-SNAPSHOT.jar
+CMD ["java", "-jar", "/app/esm-0.0.1-SNAPSHOT.jar", "DEVELOPER_KEY=","AIzaSyDlfU5gNKiS8qEqW8yW7VHLNJO7h0vawNw"]
