--- a/DockerFile
+++ b/DockerFile
@@ -11,4 +11,4 @@
 FROM openjdk:19-alpine
 WORKDIR /app
 COPY ./src/esm-0.0.1-SNAPSHOT.jar /app/esm-0.0.1-SNAPSHOT.jar
-CMD ["java", "-jar", "/app/esm-0.0.1-SNAPSHOT.jar", "DEVELOPER_KEY=","AIzaSyDlfU5gNKiS8qEqW8yW7VHLNJO7h0vawNw"]
+CMD ["java", "-jar", "/app/esm-0.0.1-SNAPSHOT.jar", "DEVELOPER_KEY","=","AIzaSyDlfU5gNKiS8qEqW8yW7VHLNJO7h0vawNw"]
